--- a/client/package.json
+++ b/client/package.json
@@ -10,16 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@azure/msal-browser": "^3.0.2",
-    "@azure/msal-react": "^2.0.2",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.6",
     "@mui/x-data-grid": "^6.8.0",
-    "@mui/x-date-pickers": "^6.14.0",
     "@reduxjs/toolkit": "^1.9.5",
-    "@tanstack/react-query": "^4.29.17",
-    "dayjs": "^1.11.10",
     "export-to-csv": "^1.0.0",
     "material-react-table": "^1.14.0",
     "react": "^18.2.0",
@@ -27,8 +22,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-redux": "^8.1.0",
-    "react-router-dom": "^6.13.0",
-    "recharts": "^2.7.3"
+    "react-router-dom": "^6.13.0"
   },
   "devDependencies": {
     "@emotion/react": "^11.11.1",
