--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,7 @@
     "export-to-csv": "^1.0.0",
     "material-react-table": "^1.14.0",
     "react": "^18.2.0",
-    "react-colorful": "^5.6.1",
+    "react-d3-graph": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-redux": "^8.1.0",
@@ -28,7 +28,7 @@
     "@emotion/react": "^11.11.1",
     "@types/node": "^20.6.3",
     "@types/react": "^18.0.37",
-    "@types/react-color": "^3.0.6",
+    "@types/react-d3-graph": "^2.6.7",
     "@types/react-dom": "^18.2.5",
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
